# docs/swagger.json
@@ -442,142 +442,6 @@
                 }
             }
         },
-        "/bookmarks": {
-            "post": {
-                "description": "Create a bookmark from the specified hackathon ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Bookmark"
-                ],
-                "summary": "Create new bookmark",
-                "parameters": [
-                    {
-                        "description": "Create Bookmark Request Body",
-                        "name": "CreateBookmarkRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.CreateBookmarkRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "create success response",
-                        "schema": {
-                            "$ref": "#/definitions/domain.BookmarkResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "bad request response",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "server error response",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/bookmarks/{account_id}": {
-            "get": {
-                "description": "Get my bookmarks",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Bookmark"
-                ],
-                "summary": "Get bookmarks",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "account_id",
-                        "name": "account_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "name": "page_id",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "page_size",
-                        "in": "formData"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success response",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.BookmarkResponse"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "bad request response",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "server error response",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete the bookmark of the specified hackathon ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Bookmark"
-                ],
-                "summary": "Delete bookmark",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Delete Bookmark Request Body",
-                        "name": "account_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "delete success response",
-                        "schema": {
-                            "$ref": "#/definitions/domain.BookmarkResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "bad request response",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "server error response",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/frameworks": {
             "get": {
                 "description": "Get Frameworks",
@@ -621,17 +485,17 @@
                     {
                         "type": "boolean",
                         "name": "expired",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "name": "page_id",
-                        "in": "formData"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "name": "page_size",
-                        "in": "formData"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -734,6 +598,142 @@
                     },
                     "500": {
                         "description": "error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/like": {
+            "post": {
+                "description": "Create a like from the specified Account ID and hackathon ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Like"
+                ],
+                "summary": "Create new like",
+                "parameters": [
+                    {
+                        "description": "Create Like Request Body",
+                        "name": "CreateLikeRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateLikeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "create success response",
+                        "schema": {
+                            "$ref": "#/definitions/domain.LikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "server error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/like/{account_id}": {
+            "get": {
+                "description": "Get my likes",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Like"
+                ],
+                "summary": "Get likes",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "account_id",
+                        "name": "account_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.LikeResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "bad request response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "server error response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a like from the specified Account ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Like"
+                ],
+                "summary": "Delete like",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Delete Like Request Body",
+                        "name": "account_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "delete success response",
+                        "schema": {
+                            "$ref": "#/definitions/domain.LikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request response",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "server error response",
                         "schema": {
                             "$ref": "#/definitions/controller.ErrorResponse"
                         }
@@ -1534,35 +1534,6 @@
                 }
             }
         },
-        "domain.BookmarkResponse": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "expired": {
-                    "type": "string"
-                },
-                "hackathon_id": {
-                    "type": "integer"
-                },
-                "icon": {
-                    "type": "string"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                },
-                "term": {
-                    "type": "integer"
-                }
-            }
-        },
         "domain.CreateAccountRequest": {
             "type": "object",
             "required": [
@@ -1594,17 +1565,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "domain.CreateBookmarkRequest": {
-            "type": "object",
-            "properties": {
-                "account_id": {
-                    "type": "string"
-                },
-                "opus": {
-                    "type": "integer"
                 }
             }
         },
@@ -1644,6 +1604,17 @@
                     }
                 },
                 "term": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.CreateLikeRequest": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "string"
+                },
+                "opus": {
                     "type": "integer"
                 }
             }
@@ -1770,6 +1741,35 @@
                     "items": {
                         "$ref": "#/definitions/repository.StatusTag"
                     }
+                },
+                "term": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.LikeResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "expired": {
+                    "type": "string"
+                },
+                "hackathon_id": {
+                    "type": "integer"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
                 },
                 "term": {
                     "type": "integer"
