# pkg/adapter/controllers/v1/account.go
@@ -25,6 +25,7 @@ type AccountController struct {
 }
 
 // CreateAccount	godoc
+//
 //	@Summary		Create new account
 //	@Description	Create an account from the requested body
 //	@Accept			multipart/form-data
@@ -34,7 +35,7 @@ type AccountController struct {
 //	@Success		200						{object}	domain.AccountResponses		"create success response"
 //	@Failure		400						{object}	ErrorResponse				"bad request response"
 //	@Failure		500						{object}	ErrorResponse				"server error response"
-//	@Router			/accounts 																										[post]
+//	@Router			/accounts 																																					[post]
 func (ac *AccountController) CreateAccount(ctx *gin.Context) {
 	var (
 		reqBody    domain.CreateAccountRequest
@@ -110,6 +111,7 @@ func (ac *AccountController) CreateAccount(ctx *gin.Context) {
 }
 
 // GetAccount		godoc
+//
 //	@Summary		Get account
 //	@Description	Return a account from the id specified in the path
 //	@Tags			Accounts
@@ -118,7 +120,7 @@ func (ac *AccountController) CreateAccount(ctx *gin.Context) {
 //	@Success		200						{object}	domain.AccountResponses	"Get success response"
 //	@Failure		400						{object}	ErrorResponse			"bad request response"
 //	@Failure		500						{object}	ErrorResponse			"server error response"
-//	@Router			/accounts/{account_id} 																								[get]
+//	@Router			/accounts/{account_id} 	[get]
 func (ac *AccountController) GetAccount(ctx *gin.Context) {
 	var reqUri domain.AccountRequestWildCard
 	if err := ctx.ShouldBindUri(&reqUri); err != nil {
@@ -136,6 +138,7 @@ func (ac *AccountController) GetAccount(ctx *gin.Context) {
 }
 
 // UpdateAccount	godoc
+//
 //	@Summary		Update Account
 //	@Description	Update account info from requested body
 //	@Tags			Accounts
@@ -145,7 +148,7 @@ func (ac *AccountController) GetAccount(ctx *gin.Context) {
 //	@Success		200						{object}	domain.AccountResponses		"Update success response"
 //	@Failure		400						{object}	ErrorResponse				"bad request response"
 //	@Failure		500						{object}	ErrorResponse				"server error response"
-//	@Router			/accounts/{account_id} 																											[put]
+//	@Router			/accounts/{account_id} 	[put]
 func (ac *AccountController) UpdateAccount(ctx *gin.Context) {
 	var (
 		reqBody domain.UpdateAccountRequest
@@ -222,6 +225,7 @@ func (ac *AccountController) UpdateAccount(ctx *gin.Context) {
 }
 
 // DeleteAccount	godoc
+//
 //	@Summary		Remove Account
 //	@Description	Only you can delete your account (logical delete)
 //	@Tags			Accounts
@@ -230,7 +234,7 @@ func (ac *AccountController) UpdateAccount(ctx *gin.Context) {
 //	@Success		200						{object}	SuccessResponse	"delete success response"
 //	@Failure		400						{object}	ErrorResponse	"bad request response"
 //	@Failure		500						{object}	ErrorResponse	"server error response"
-//	@Router			/accounts/{account_id} 														[delete]
+//	@Router			/accounts/{account_id} 	[delete]
 func (ac *AccountController) DeleteAccount(ctx *gin.Context) {
 	var reqURI domain.AccountRequestWildCard
 	if err := ctx.ShouldBindUri(&reqURI); err != nil {
