# pkg/adapter/controllers/v1/hackathon.go
@@ -17,6 +17,7 @@ type HackathonController struct {
 }
 
 // CreateHackathon	godoc
+//
 //	@Summary		Create Hackathon
 //	@Description	Register a hackathon from given parameters
 //	@Tags			Hackathon
@@ -25,7 +26,7 @@ type HackathonController struct {
 //	@Success		200							{object}	domain.HackathonResponses			"success response"
 //	@Failure		400							{object}	ErrorResponse						"error response"
 //	@Failure		500							{object}	ErrorResponse						"error response"
-//	@Router			/hackathons																																															[post]
+//	@Router			/hackathons	[post]
 func (hc *HackathonController) CreateHackathon(ctx *gin.Context) {
 	var (
 		reqBody domain.CreateHackathonRequestBody
@@ -70,6 +71,7 @@ func (hc *HackathonController) CreateHackathon(ctx *gin.Context) {
 }
 
 // GetHackathon	godoc
+//
 //	@Summary		Get Hackathon
 //	@Description	Get Hackathon
 //	@Tags			Hackathon
@@ -78,7 +80,7 @@ func (hc *HackathonController) CreateHackathon(ctx *gin.Context) {
 //	@Success		200							{object}	domain.HackathonResponses	"success response"
 //	@Failure		400							{object}	ErrorResponse				"error response"
 //	@Failure		500							{object}	ErrorResponse				"error response"
-//	@Router			/hackathons/{hackathon_id} 																				[get]
+//	@Router			/hackathons/{hackathon_id}	[get]
 func (hc *HackathonController) GetHackathon(ctx *gin.Context) {
 	var reqURI domain.HackathonRequestWildCard
 	if err := ctx.ShouldBindUri(&reqURI); err != nil {
@@ -99,15 +101,16 @@ func (hc *HackathonController) GetHackathon(ctx *gin.Context) {
 // ハッカソン一覧を取得する際のパラメータ
 
 // ListHackathons	godoc
+//
 //	@Summary		List Hackathon
 //	@Description	List Hackathon
 //	@Tags			Hackathon
 //	@Produce		json
-//	@Param			ListHackathonsParams	formData	domain.ListHackathonsParams	true	"List hackathon Request queries"
+//	@Param			ListHackathonsParams	query		domain.ListHackathonsParams	true	"List hackathon Request queries"
 //	@Success		200						{array}		domain.HackathonResponses	"success response"
 //	@Failure		400						{object}	ErrorResponse				"error response"
 //	@Failure		500						{object}	ErrorResponse				"error response"
-//	@Router			/hackathons 																																	[get]
+//	@Router			/hackathons	[get]
 func (hc *HackathonController) ListHackathons(ctx *gin.Context) {
 	var reqQuery domain.ListHackathonsParams
 	if err := ctx.ShouldBindQuery(&reqQuery); err != nil {
